
interface
- new method SCIPisConflictAnalysisApplicable() which return FALSE is the conflict will not runs; can be used
  to avoid unnecessary initialization of the conflict analysis
- the methods SCIPsortedvecInsert*() have an additional parameter which can be used to receive the position where 
  the new element was inserted, if this is not of interest a NULL pointer can be given

parameters:
- changed default value of parameter <separating/gomory/maxroundsroot> to 10
- changed default value of parameter <separating/gomory/maxsepacutsroot> to 50
- changed default value of parameter <presolving/inttobinary/maxrounds> to 0


SCIP version 2.1.0
===============

interface:
- new method SCIPstartSolvingTime() and SCIPstopSolvingTime() which can be used to start or stop the solving time clock
- new methods SCIPcheckCumulativeCondition(), SCIPpropCumulativeCondition, and SCIPrespropCumulativeCondition in cons_cumulative.h;
  these methods can be used to check, propagate, or resolve the propagation of a cumulative condition
- new methods SCIPstrToRealValue() and SCIPstrCopySection() in pub_misc.h; these methods can be used to 
  convert a string into a SCIP_Real value and to copy a substring.
- the methods SCIPwriteVarName() SCIPwriteVarsList(), and SCIPwriteVarsLinearsum() have a new parameter named "type" of type SCIP_Bool
  which determines if the variable type should be written or not
- the methods SCIPparseVarName() and SCIPparseVarsList() got one new output parameter "endptr" which is filled with the position where the parsing stopped
- new functions SCIPround() and SCIPfeasRound() to round to nearest integer
- new functions SCIPcomputeVarCurrent{L,U}b{Local,Global}() to compute local or global lower or upper bounds of a multiaggregated variable
  from the bounds of the aggregation variables
- new method SCIPsetConsModifiable()